gnpt: workflow